have each button use its own side navbar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <body>
   <!-- for side learning resources navs -->
-  <nav class="menu slide-menu-left-ruby slide-menu-left">
+  <nav class="menu slide-menu-left-ruby">
     <ul>
         <li><button class="close-menu">&larr; Close</button></li>
         <li><a href="#">Rails</a></li>
@@ -26,7 +26,7 @@
         <li><a href="#">Other</a></li>
     </ul>
 </nav>
-<nav class="menu slide-menu-left-python slide-menu-left">
+<nav class="menu slide-menu-left-python">
     <ul>
         <li><button class="close-menu">&larr; Close</button></li>
         <li><a href="#">Codecademy</a></li>
@@ -36,7 +36,7 @@
         <li><a href="#">github</a></li>
     </ul>
 </nav>
-<nav class="menu slide-menu-left-cplusplus slide-menu-left">
+<nav class="menu slide-menu-left-cplusplus">
     <ul>
         <li><button class="close-menu">&larr; Close</button></li>
         <li><a href="#">visual studio</a></li>
@@ -46,7 +46,6 @@
         <li><a href="#">other</a></li>
     </ul>
 </nav>
-
 <!-- end side resources -->
   
   
@@ -155,7 +154,7 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <div class="lead list-group" align="center">
+            <div class="lead list-group">
             <!--
               <a href="http://javascriptweekly.com" target="_blank" class="list-group-item">JavaScript Weekly</a>
               <a href="http://html5weekly.com" target="_blank" class="list-group-item">HTML5 Weekly</a>
@@ -166,9 +165,9 @@
               <a href="https://www.codeschool.com" target="_blank" class="list-group-item">Code School</a>
               <a href="https://teamtreehouse.com" target="_blank" class="list-group-item">Treehouse</a>
               -->
-              <button class="list-group-item nav-toggler toggle-slide-left-ruby toggle-slide-left">Ruby</button>
-              <button class="list-group-item nav-toggler toggle-slide-left-python toggle-slide-left">Python</button>
-              <button class="list-group-item nav-toggler toggle-slide-left-cplusplus toggle-slide-left">C++</button>
+              <button class="list-group-item nav-toggler toggle-slide-left-ruby">Ruby</button>
+              <button class="list-group-item nav-toggler toggle-slide-left-python">Python</button>
+              <button class="list-group-item nav-toggler toggle-slide-left-cplusplus">C++</button>
             </div>
           </div>
         </div>
