lots of styling

--- a/index.html
+++ b/index.html
@@ -17,33 +17,36 @@
   <body>
   <!-- for side learning resources navs -->
   <nav class="menu slide-menu-left-ruby">
-    <ul>
+    <ul class="list-group">
+        <li class="slide-heading">Ruby</li>
+        <li class="list-group-item"><a href="#">Rails</a></li>
+        <li class="list-group-item"><a href="#">Railscasts</a></li>
+        <li class="list-group-item"><a href="#">Railstut</a></li>
+        <li class="list-group-item"><a href="#">codecademy</a></li>
+        <li class="list-group-item"><a href="#">Other</a></li>
         <li><button class="close-menu">&larr; Close</button></li>
-        <li><a href="#">Rails</a></li>
-        <li><a href="#">Railscasts</a></li>
-        <li><a href="#">Railstut</a></li>
-        <li><a href="#">codecademy</a></li>
-        <li><a href="#">Other</a></li>
     </ul>
 </nav>
 <nav class="menu slide-menu-left-python">
-    <ul>
-        <li><button class="close-menu">&larr; Close</button></li>
-        <li><a href="#">Codecademy</a></li>
-        <li><a href="#">python</a></li>
-        <li><a href="#">snakes</a></li>
-        <li><a href="#">readmem</a></li>
-        <li><a href="#">github</a></li>
+    <ul class="list-group">
+        <li class="slide-heading">Python</li>
+        <li class="list-group-item"><a href="#">Codecademy</a></li>
+        <li class="list-group-item"><a href="#">python</a></li>
+        <li class="list-group-item"><a href="#">snakes</a></li>
+        <li class="list-group-item"><a href="#">readmem</a></li>
+        <li class="list-group-item"><a href="#">github</a></li>
+        <li class="list-group-item"><button class="close-menu">&larr; Close</button></li>
     </ul>
 </nav>
 <nav class="menu slide-menu-left-cplusplus">
-    <ul>
-        <li><button class="close-menu">&larr; Close</button></li>
-        <li><a href="#">visual studio</a></li>
-        <li><a href="#">guide</a></li>
-        <li><a href="#">arduino</a></li>
-        <li><a href="#">raw</a></li>
-        <li><a href="#">other</a></li>
+    <ul class="list-group">
+        <li class="slide-heading">C++</li>
+        <li class="list-group-item"><a href="#">visual studio</a></li>
+        <li class="list-group-item"><a href="#">guide</a></li>
+        <li class="list-group-item"><a href="#">arduino</a></li>
+        <li class="list-group-item"><a href="#">raw</a></li>
+        <li class="list-group-item"><a href="#">other</a></li>
+        <li class="list-group-item"><button class="close-menu">&larr; Close</button></li>
     </ul>
 </nav>
 <!-- end side resources -->
@@ -153,7 +156,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-12">
+          <div class="col-md-8 col-md-offset-2">
             <div class="lead list-group">
             <!--
               <a href="http://javascriptweekly.com" target="_blank" class="list-group-item">JavaScript Weekly</a>
@@ -165,9 +168,9 @@
               <a href="https://www.codeschool.com" target="_blank" class="list-group-item">Code School</a>
               <a href="https://teamtreehouse.com" target="_blank" class="list-group-item">Treehouse</a>
               -->
-              <button class="list-group-item nav-toggler toggle-slide-left-ruby">Ruby</button>
-              <button class="list-group-item nav-toggler toggle-slide-left-python">Python</button>
-              <button class="list-group-item nav-toggler toggle-slide-left-cplusplus">C++</button>
+              <a href="#ruby" class="list-group-item nav-toggler toggle-slide-left-ruby">Ruby</a>
+              <a href="#python" class="list-group-item nav-toggler toggle-slide-left-python">Python</a>
+              <a href="#cplusplus" class="list-group-item nav-toggler toggle-slide-left-cplusplus">C++</a>
             </div>
           </div>
         </div>
