DRY up the code by sorting it into partials

--- a/index.html
+++ b/index.html
@@ -14,116 +14,17 @@
   </head>
 
   <body>
-    <div class="cover">
-      <div class="navbar navbar-inverse">
-        <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand"></a>
-          </div>
-          <div class="collapse navbar-collapse navbar-ex1-collapse">
-            <ul class="nav navbar-nav navbar-right">
-              <li class="active">
-                <a href="#section-slack">Slack</a>
-              </li>
-              <li class="active">
-                <a href="#section-projects">Projects</a>
-              </li>
-              <li class="active">
-                <a href="#section-resources">Resources</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="background-image-fixed cover-image img-responsive center-block" style="background-image : url('assets/bg.jpg')"></div>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 text-center" id="hero">
-            <h1 class="text-inverse">
-              <b>Learn Web Development</b>
-            </h1>
-            <p class="lead text-inverse">
-              <b>A community focused on learning and discussing web development</b>
-            </p>
-          </div>
-        </div>
-      </div>
+    <div class="cover" id="top">
+      <script>$('#top').load('assets/navbar.html');</script>
     </div>
     <div class="section" id="section-slack">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <h1 class="text-center">Slack</h1>
-            <p class="lead text-center">Request an invite to our community.</p>
-            <p class="text-center">
-              <script async="" defer="" src="//learnwebdev-slackin.herokuapp.com/slackin.js?large"></script>
-            </p>
-            <h4 class="text-center">Please take a moment and read through our
-              <a href="https://github.com/learnwebdev/LearnWebDev-Code-Of-Conduct" target="_blank">Code of Conduct</a>.
-            </h4>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <hr>
-          </div>
-        </div>
-      </div>
+      <script>$('#section-slack').load('assets/slack.html');</script>
     </div>
     <div class="section" id="section-projects">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <h1 class="text-center">Projects</h1>
-            <p class="lead text-center">We've built some things.</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-4">
-            <a href="http://redditgraphed.com" target="_blank"><img alt="A Picture of the Redditgraphed Web Site" src="assets/redditgraphed.png" class="img-responsive img-thumbnail"></a>
-            <h3 class="text-center">Redditgraphed</h3>
-            <p class="text-center">Analysis of Reddit posts</p>
-          </div>
-          <div class="col-md-4">
-            <a href="https://stationstream.space" target="_blank"><img alt="A Picture of the StationStream Web Site" src="assets/stationstream.png" class="img-responsive img-thumbnail"></a>
-            <h3 class="text-center">StationStream</h3>
-            <p class="text-center">Real-time tracking of the ISS</p>
-          </div>
-          <div class="col-md-4">
-            <a><img alt="A Placeholder Image" src="//pingendo.github.io/pingendo-bootstrap/assets/placeholder.png" class="img-responsive img-thumbnail"></a>
-            <h3 class="text-center">Upcoming Project</h3>
-            <p class="text-center">Help us make something great!</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <hr>
-          </div>
-        </div>
-      </div>
+      <script>$('#section-projects').load('assets/projects.html');</script>
     </div>
     <div class="section" id="section-resources">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <h1 class="text-center">Resources</h1>
-            <p class="lead text-center">Other places to go to learn web development.</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-8 col-md-offset-2">
-            <div class="lead" id="list">
-              <script>$('#list').load('assets/list.html');</script>
-            </div>
-          </div>
-        </div>
-      </div>
+      <script>$('#section-resources').load('assets/list.html');</script>
     </div>
 
   </body>
