finish cleaning up/orginizing files

--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="assets/style.css">
-    <link href="assets/icon.png" rel="icon" type="image">
+    <link rel="stylesheet" href="stylesheets/style.css">
+    <link href="images/icon.png" rel="icon" type="image">
   </head>
 
   <body>
     <div class="cover" id="top">
-      <script>$('#top').load('assets/navbar.html');</script>
+      <script>$('#top').load('pages/navbar.html');</script>
     </div>
     <div class="section" id="section-slack">
-      <script>$('#section-slack').load('assets/slack.html');</script>
+      <script>$('#section-slack').load('pages/slack.html');</script>
     </div>
     <div class="section" id="section-projects">
-      <script>$('#section-projects').load('assets/projects.html');</script>
+      <script>$('#section-projects').load('pages/projects.html');</script>
     </div>
     <div class="section" id="section-resources">
-      <script>$('#section-resources').load('assets/list.html');</script>
+      <script>$('#section-resources').load('pages/list.html');</script>
     </div>
 
   </body>
