--- a/pages/navbar.html
+++ b/pages/navbar.html
@@ -24,7 +24,7 @@
           </div>
         </div>
       </div>
-      <div class="background-image-fixed cover-image img-responsive center-block" style="background-image : url('assets/bg.jpg')"></div>
+      <div class="background-image-fixed cover-image img-responsive center-block" style="background-image : url('images/bg.jpg')"></div>
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center" id="hero">
