--- a/pages/projects.html
+++ b/pages/projects.html
@@ -7,12 +7,12 @@
         </div>
         <div class="row">
           <div class="col-md-4">
-            <a href="http://redditgraphed.com" target="_blank"><img alt="A Picture of the Redditgraphed Web Site" src="assets/redditgraphed.png" class="img-responsive img-thumbnail"></a>
+            <a href="http://redditgraphed.com" target="_blank"><img alt="A Picture of the Redditgraphed Web Site" src="images/redditgraphed.png" class="img-responsive img-thumbnail"></a>
             <h3 class="text-center">Redditgraphed</h3>
             <p class="text-center">Analysis of Reddit posts</p>
           </div>
           <div class="col-md-4">
-            <a href="https://stationstream.space" target="_blank"><img alt="A Picture of the StationStream Web Site" src="assets/stationstream.png" class="img-responsive img-thumbnail"></a>
+            <a href="https://stationstream.space" target="_blank"><img alt="A Picture of the StationStream Web Site" src="images/stationstream.png" class="img-responsive img-thumbnail"></a>
             <h3 class="text-center">StationStream</h3>
             <p class="text-center">Real-time tracking of the ISS</p>
           </div>
